tests/ui/consts/trait_alias.fail.stderr
error[E0277]: the trait bound `T: [const] Baz` is not satisfied
  --> $DIR/trait_alias.rs:22:11
   |
LL |         x.baz();
   |           ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
